Make nodes appear in template

--- a/undirected_edges.html
+++ b/undirected_edges.html
@@ -3,7 +3,7 @@
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script> 
     </head>
     <body>
-
+    <!-- Please make code verbose and legible-->
         <p id="demo" style="position:relative;">DEMO</p>
             <svg id="edge">
                 <circle id="rc" cx="50" cy="50" r="20" fill="red" style="position:absolute ; z-index:100;"/>
